# endstone-live-map

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-worker.yml  map-tile-backfill-job.yml  provision-cloudflare.yml  rebuild-map-tiles.yml
infra/mysql/: 001_markers.sql
plugin/: CMakeLists.txt
plugin/config/: live_map.json.example
plugin/include/livemap/: base64.hpp  baseline.hpp  bmp_writer.hpp  chunk.hpp  color_map.hpp  dirty_tile_tracker.hpp  land.hpp  map_blocks.hpp  map_tile.hpp  png.hpp  protocol.hpp  r2_client.hpp  r2_signing.hpp  settings.hpp  sha256.hpp  tile_math.hpp  tile_renderer.hpp  upload_queue.hpp
plugin/src/: base64.cpp  baseline.cpp  bmp_writer.cpp  chunk.cpp  color_map.cpp  dirty_tile_tracker.cpp  endstone_plugin.cpp  http_transport.cpp  land.cpp  map_blocks.cpp  map_tile.cpp  png.cpp  protocol.cpp  r2_client.cpp  r2_signing.cpp  settings.cpp  sha256.cpp  tile_math.cpp  tile_renderer.cpp
plugin/tests/: core_tests.cpp
scripts/: audit-map-tiles.mjs  audit-map-tiles.test.mjs  build-texture-atlas.mjs  cleanup-r2-map-data.mjs  cloudflare-bootstrap.md  nas-full-import.sh  nas-install.sh  provision-cloudflare.mjs  upload-textures.mjs
server/: package.json
server/src/: index.js
server/tests/: server.test.js
shared/: blockColors.d.mts  blockColors.mjs
tools/importer/: chunkSnapshot.js  import-bedrock-world.mjs  mapBlocks.js  package.json
web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: api.ts  (+3 more)
worker/: package.json  wrangler.jsonc
(+18 files in other folders)
